[tool.poetry]
name = "Pinger"
version = "0.1.0"
description = "A simple pinger using Repl.it db!"
authors = ["Navaneeth K M"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2"
httpx = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
